--- a/modelo_app/templates/base/header.html
+++ b/modelo_app/templates/base/header.html
@@ -5,6 +5,8 @@
         </div>
         <div class="header-topbar">
             <a href="{% url 'index' %}">INICIO</a>
+            <a href="{% url 'examen_index' %}">EXAMEN</a>
+            <a href="{% url 'examen_evento' %}">EVENTOS</a>
             <a href="{% url 'users_index' %}">CLIENTES</a>
             <a href="{% url 'orders_index' %}">ORDERS</a>
         </div>
